--- a/.env copy
+++ b/.env copy
@@ -7,5 +7,11 @@ PROVIDER_USERNAME=provideruser
 PROVIDER_PASSWORD=providerpass
 PROVIDER_TRANSPORT=udp
 EXTERNAL_IP=example.external.ip
+VAPI_HOST=example.external.ip
+VAPI_PORT=5060
+VAPI_USERNAME=provideruser
+VAPI_PASSWORD=providerpass
+VAPI_TRANSPORT=udp
+
 PROVISION_SCRIPT_URL=https://raw.githubusercontent.com/insidedynamic-de/sip_wrapper/main/provision_freeswitch.sh
 START_COMMAND=wget --no-cache --no-check-certificate -qO /tmp/provision_freeswitch.sh ${PROVISION_SCRIPT_URL}?$(date +%s) && chmod +x /tmp/provision_freeswitch.sh && /tmp/provision_freeswitch.sh && /usr/bin/freeswitch -nonat -nf
