--- a/docker-compose.coolify-debug.yml
+++ b/docker-compose.coolify-debug.yml
@@ -113,27 +113,40 @@ services:
         echo "[STEP 3/8] Adding SignalWire FreeSWITCH repository..."
         echo "Downloading GPG key from SignalWire..."
 
-        # Download with timeout and retry
-        MAX_ATTEMPTS=3
-        ATTEMPT=1
-        while [ $$ATTEMPT -le $$MAX_ATTEMPTS ]; do
-          echo "Attempt $$ATTEMPT of $$MAX_ATTEMPTS..."
+        # Download with timeout and retry - trying multiple URLs
+        GPG_KEY_URLS=(
+          "https://files.freeswitch.org/repo/deb/debian-release/fsstretch-archive-keyring.asc"
+          "https://freeswitch.signalwire.com/repo/deb/debian-release/fsstretch-archive-keyring.asc"
+          "https://files.freeswitch.org/repo/deb/freeswitch-1.10/fsstretch-archive-keyring.asc"
+        )
 
-          if wget --timeout=30 --tries=1 -qO- https://files.freeswitch.org/repo/deb/debian-release/fsstretch-archive-keyring.asc 2>/dev/null | \
+        GPG_SUCCESS=0
+        for GPG_URL in "$${GPG_KEY_URLS[@]}"; do
+          echo "Trying to download GPG key from: $$GPG_URL"
+
+          if wget --timeout=30 --tries=2 -qO- "$$GPG_URL" 2>/dev/null | \
              gpg --dearmor -o /usr/share/keyrings/signalwire-freeswitch-repo.gpg 2>/dev/null; then
-            echo "✓ GPG key downloaded successfully"
+            echo "✓ GPG key downloaded successfully from $$GPG_URL"
+            GPG_SUCCESS=1
             break
           else
-            echo "Failed to download GPG key (attempt $$ATTEMPT/$$MAX_ATTEMPTS)"
-            if [ $$ATTEMPT -eq $$MAX_ATTEMPTS ]; then
-              echo "ERROR: Could not download SignalWire GPG key after $$MAX_ATTEMPTS attempts"
-              echo "This might be a network issue or SignalWire repository is unavailable"
-              exit 1
-            fi
-            ATTEMPT=$$((ATTEMPT + 1))
-            sleep 5
+            echo "Failed to download from $$GPG_URL, trying next..."
+            sleep 3
           fi
         done
+
+        if [ $$GPG_SUCCESS -eq 0 ]; then
+          echo ""
+          echo "ERROR: Could not download SignalWire GPG key from any source!"
+          echo "Tried all available URLs. This indicates a network connectivity issue."
+          echo ""
+          echo "Please check:"
+          echo "1. Can your Coolify server reach the internet?"
+          echo "2. Is there a firewall blocking outbound HTTPS?"
+          echo "3. Try manually: curl -I https://files.freeswitch.org"
+          echo ""
+          exit 1
+        fi
 
         CODENAME=$$(lsb_release -sc)
         echo "Adding repository for $$CODENAME..."
