--- a/docker-compose.coolify-prebuilt.yml
+++ b/docker-compose.coolify-prebuilt.yml
@@ -103,7 +103,16 @@ services:
         echo "[STEP 5/6] Running provision script..."
         wget -qO /tmp/provision.sh https://raw.githubusercontent.com/insidedynamic-de/sip_wrapper/main/provision.sh
         chmod +x /tmp/provision.sh
-        bash /tmp/provision.sh || { echo "ERROR: Provision failed"; exit 1; }
+
+        # Run with explicit bash path and capture full error output
+        echo "Running provision.sh with /bin/bash..."
+        /bin/bash -x /tmp/provision.sh 2>&1 || {
+          EXIT_CODE=$$?
+          echo ""
+          echo "ERROR: Provision failed with exit code $$EXIT_CODE"
+          echo "Last lines of execution shown above"
+          exit 1
+        }
         echo "✓ Provision completed"
 
         # Start FreeSWITCH
