Enhance gateway configuration: add optional auth_username field for SIP authentication

--- a/.env.template
+++ b/.env.template
@@ -27,7 +27,11 @@ USERS=exampleuser:examplepass:1001
 
 ################################################################################
 # GATEWAYS - SIP Providers/Trunks
-# Format: name:host:port:username:password:register:transport
+# Format: name:host:port:username:password:register:transport[:auth_username]
+#
+# auth_username (optional, 8th field):
+# - If NOT provided: auth_username = username (default behavior)
+# - If provided: used for SIP authentication (useful for 3CX, some PBX systems)
 ################################################################################
 
 # Пример: Provider Gateway (исходящие звонки)
@@ -38,6 +42,10 @@ GATEWAYS=provider:fpbx.de:5060:777z9uovpu:4UMtPyXw8Qss:true:udp
 
 # Пример: Gateway без регистрации (для inbound only)
 # GATEWAYS=provider:fpbx.de:5060:777z9uovpu:4UMtPyXw8Qss:true:udp,vapi:203.0.113.50:5060:::false:udp
+
+# Пример: 3CX Gateway (с отдельным auth-username)
+# Extension: 14, Auth-ID: Qh4wiCIKg9
+# GATEWAYS=3cx:kalbfussit.on3cx.de:5060:14:n5qluS8qHB:true:udp:Qh4wiCIKg9
 
 ################################################################################
 # OUTBOUND ROUTING
@@ -157,6 +165,22 @@ SIP_TRACE=no
 # GATEWAYS=provider_de:sip.de.com:5060:user_de:pass_de:true:udp,provider_us:sip.us.com:5060:user_us:pass_us:true:udp
 # OUTBOUND_ROUTES=^\+49.*:provider_de,^\+1.*:provider_us
 # INBOUND_ROUTES=+4930111111:1001,+4930222222:1002
+
+# --- ПРИМЕР 4: 3CX Gateway (с отдельным auth-username) ---
+# FS_DOMAIN=office.company.com
+# EXTERNAL_SIP_IP=203.0.113.100
+# EXTERNAL_RTP_IP=203.0.113.100
+# USERS=alice:SecretPass:1001
+# GATEWAYS=3cx:kalbfussit.on3cx.de:5060:14:n5qluS8qHB:true:udp:Qh4wiCIKg9
+# DEFAULT_GATEWAY=3cx
+# DEFAULT_EXTENSION=1001
+#
+# Как это работает:
+# - 3CX требует два поля: Extension (14) и Auth-ID (Qh4wiCIKg9)
+# - username=14 используется для From-User и внутренней маршрутизации 3CX
+# - auth-username=Qh4wiCIKg9 используется для SIP-аутентификации
+# - Исходящие звонки: alice → 3cx gateway
+# - Входящие звонки: 3cx → alice (extension 1001)
 
 ################################################################################
 # MIGRATION FROM OLD SYSTEM
