--- a/.env.template
+++ b/.env.template
@@ -95,6 +95,27 @@ DEFAULT_EXTENSION=1001
 # ACL_USERS=vapi_trunk:203.0.113.50:9000
 
 ################################################################################
+# ADMIN PORTAL
+################################################################################
+
+# Admin Web Interface
+ADMIN_PORT=8888
+ADMIN_USER=admin
+ADMIN_PASS=admin
+
+# FreeSWITCH ESL Connection (admin connects to FS via ESL)
+FS_HOST=127.0.0.1
+FS_PORT=8021
+FS_PASS=ClueCon
+
+# IP-based access control for FS commands
+# 127.0.0.1 = localhost only (default, secure)
+# 0.0.0.0 = allow all (only use behind firewall!)
+# 192.168.1.0/24 = allow subnet
+# 10.0.0.5,10.0.0.6 = specific IPs
+FS_ALLOWED_IPS=127.0.0.1
+
+################################################################################
 # OPTIONAL SETTINGS
 ################################################################################
 
