feat: implement strict user authentication for FreeSWITCH with XML CURL and Lua script

--- a/.env.template
+++ b/.env.template
@@ -99,6 +99,7 @@ DEFAULT_EXTENSION=1001
 ################################################################################
 
 # Admin Web Interface
+ADMIN_HOST=127.0.0.1
 ADMIN_PORT=8888
 ADMIN_USER=admin
 ADMIN_PASS=admin
