Add internationalization support for admin panel
- Updated profile and security templates to use translation functions for UI text.
- Added German and English language JSON files for localization.
- Changed default color theme in wrapper_config.json to "forest".
- Updated loading messages and button labels for better user experience.

--- a/admin/wrapper_config.json
+++ b/admin/wrapper_config.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "updated_at": "2026-02-07T22:55:37.362605",
+  "updated_at": "2026-02-07T23:17:20.785113",
   "license": {
     "key": "IDGMBH-2025-001",
     "client_name": "Mustermann GmbH"
@@ -218,6 +218,6 @@
   },
   "profile": {
     "theme_mode": "light",
-    "color_theme": "default"
+    "color_theme": "forest"
   }
 }
