--- a/docker-compose.coolify-prebuilt.yml
+++ b/docker-compose.coolify-prebuilt.yml
@@ -246,6 +246,21 @@ services:
 
         echo "✓ Logging configured (console + file)"
 
+        # Create event_socket.conf.xml for ESL event streaming
+        cat > /etc/freeswitch/autoload_configs/event_socket.conf.xml << 'ESLEOF'
+        <configuration name="event_socket.conf" description="Socket Client">
+          <settings>
+            <param name="nat-map" value="false"/>
+            <param name="listen-ip" value="0.0.0.0"/>
+            <param name="listen-port" value="8021"/>
+            <param name="password" value="ClueCon"/>
+            <param name="apply-inbound-acl" value="loopback.auto"/>
+          </settings>
+        </configuration>
+        ESLEOF
+
+        echo "✓ Event Socket configured (ESL on port 8021)"
+
         # Start Admin Portal
         echo ""
         echo "[STEP 9/9] Starting Admin Portal..."
